logs/dag_id=postgres_operator_dag/run_id=manual__2024-05-06T103534.925603+0000/task_id=insert_to_postgres/attempt=3.log
[2024-05-06T10:45:43.831+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-06T10:45:43.852+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T10:35:34.925603+00:00 [queued]>
[2024-05-06T10:45:43.861+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T10:35:34.925603+00:00 [queued]>
[2024-05-06T10:45:43.862+0000] {taskinstance.py:2303} INFO - Starting attempt 3 of 3
[2024-05-06T10:45:43.875+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): insert_to_postgres> on 2024-05-06 10:35:34.925603+00:00
[2024-05-06T10:45:43.881+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=781) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-05-06T10:45:43.883+0000] {standard_task_runner.py:63} INFO - Started process 782 to run task
[2024-05-06T10:45:43.882+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_dag', 'insert_to_postgres', 'manual__2024-05-06T10:35:34.925603+00:00', '--job-id', '82', '--raw', '--subdir', 'DAGS_FOLDER/kachevo.py', '--cfg-path', '/tmp/tmp9xp31ld7']
[2024-05-06T10:45:43.884+0000] {standard_task_runner.py:91} INFO - Job 82: Subtask insert_to_postgres
[2024-05-06T10:45:43.921+0000] {task_command.py:426} INFO - Running <TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T10:35:34.925603+00:00 [running]> on host db2363de7199
[2024-05-06T10:45:43.998+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='postgres_operator_dag' AIRFLOW_CTX_TASK_ID='insert_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-05-06T10:35:34.925603+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-06T10:35:34.925603+00:00'
[2024-05-06T10:45:44.000+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-06T10:45:44.033+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-05-06T10:45:44.095+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-06T10:45:44.096+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/kachevo.py", line 72, in insert_to_postgres
    cursor.execute("INSERT INTO pet VALUES (%s, %s, %s, %s, %s)", mysql_result)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "%")
LINE 1: INSERT INTO pet VALUES (%s, %s, %s, %s, %s)
                                ^

[2024-05-06T10:45:44.109+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=postgres_operator_dag, task_id=insert_to_postgres, execution_date=20240506T103534, start_date=20240506T104543, end_date=20240506T104544
[2024-05-06T10:45:44.121+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 82 for task insert_to_postgres (ОШИБКА:  ошибка синтаксиса (примерное положение: "%")
LINE 1: INSERT INTO pet VALUES (%s, %s, %s, %s, %s)
                                ^
; 782)
[2024-05-06T10:45:44.137+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-06T10:45:44.153+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-06T10:45:44.155+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
